# Mooncake

./: CMakeLists.txt
mooncake-conductor/: CMakeLists.txt  dependencies.sh  readme.md
mooncake-conductor/include/: conductor_proxy.h  conductor_types.h  conductor_utils.h  types.h
mooncake-conductor/include/api_endpoint_adapter/: adapter_factory.h  api_endpoint_adapter.h  vllm_endpoint_adapter.h
mooncake-conductor/include/api_endpoint_adapter/internal/: adapter_initializer.h
mooncake-conductor/include/conductor-service/: cli_parse.h  conductor_proxy.h  kv_manager.h  mooncake_store_communication_layer.h  node_register.h  prefill_planner.h  request_handler.h
mooncake-conductor/include/physical_key_generator/vllm/: block_serializer.h  hash.h  python_pickle_serializer.h
mooncake-conductor/include/scheduler/cache_aware_prefill_scheduler/: adapter_factory.h  api_endpoint_adapter.h  cache_hit_distribution_collector.h  cost_score_calculator.h  dynamic_weight_manager.h  load_metrics_collector.h  logical_key_generator.h  physical_key_generator.h
mooncake-conductor/py/: proxy.py
mooncake-conductor/src/: CMakeLists.txt  conductor_proxy.cpp  conductor_utils.cpp
mooncake-conductor/src/api_endpoint_adapter/: adapter_cleanup.cpp  vllm_endpoint_adapter.h
mooncake-conductor/src/api_endpoint_adapter/vllm/: vllm_endpoint_adapter.cpp  vllm_endpoint_adapter.h
mooncake-conductor/src/conductor-service/:  kv_manager.cpp  CMakeLists.txt  cli_parse.cpp  conductor_proxy.cpp  mooncake_store_communication_layer.cpp  prefill_planner.cpp  reference.py  request_handler.cpp
mooncake-conductor/src/physical_key_generator/vllm/: block_serializer.cpp  python_pickle_serializer.cpp
mooncake-conductor/test/: test_main.cpp
mooncake-integration/store/: store_py.cpp
mooncake-store/include/: pybind_client.h
mooncake-store/src/: pybind_client.cpp
